--- a/index.html
+++ b/index.html
@@ -2,14 +2,12 @@
 <html>
 
 <head>
-    <script src="js/ButtonUpDown.js" defer></script>
-    <script src="js/app.js" defer></script>
+    <script src="js/assembled application.js"></script>
 </head>
 
 <body>
 <h1>Scroll down to see buttons</h1>
 <div style="width:50px; height: 5000px"></div>
-
 
 
 </body>
