--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html>
 
 <head>
-    <script src="js/assembled application.js"></script>
+    <script src="js/common.js"></script>
+    <script src="js/polyfills.js"></script>
+    <script src="js/buttonUpDown.js"></script>
 </head>
 
 <body>
 <h1>Scroll down to see buttons</h1>
-<div style="width:50px; height: 5000px"></div>
+<div style="width:50px; height: 8000px"></div>
 
 
 </body>
